fix: decrease the gap between cards

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
 
 .section {
   display: grid;
-  gap: 1.5rem;
+  gap: 1rem;
 } 
 
 .section__card {
